# NBA-Machine-Learning-Sports-Betting

./: .gitignore  Makefile  pyproject.toml
Data/: OddsData.sqlite  odds.sqlite
Models/: XGBoost_63.0%_ML-4.json  XGBoost_65.0%_ML-4.json  XGBoost_65.1%_ML-4.json  XGBoost_66.8%_ML-4.json  XGBoost_67.4%_ML-4.json  XGBoost_67.5%_ML-4.json  XGBoost_67.9%_ML-4.json  XGBoost_68.0%_ML-4.json  XGBoost_68.2%_ML-4.json  XGBoost_68.5%_ML-4.json  XGBoost_68.7%_ML-4.json
src/Train-Models/: NN_Model_ML.py  NN_Model_UO.py
