[tool.poetry]
name = "nba-machine-learning-sports-betting"
version = "0.1.0"
description = ""
authors = ["Chris Spann <cspanndev@gmail.com>"]
readme = "README.md"
packages = [{include = "nba_machine_learning_sports_betting"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
colorama = "^0.4.6"
pandas = "2.1.1"
sbrscrape = "^0.0.10"
tensorflow-macos = "^2.15.0"
xgboost = "^2.0.2"
tqdm = "^4.66.1"
flask = "^3.0.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
